// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`makePagination > disable if unnecessary  1`] = `
<DocumentFragment>
  <ul
    class="pagination"
  >
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          class="sr-only"
        >
          First
        </span>
      </span>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          class="sr-only"
        >
          Previous
        </span>
      </span>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
      >
        1
        <span
          class="sr-only"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          class="sr-only"
        >
          Next
        </span>
      </span>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          class="sr-only"
        >
          Last
        </span>
      </span>
    </li>
    <input
      data-bb-test-id="pagination-goto-input"
      disabled=""
      enterkeyhint="go"
      max="1"
      min="1"
      placeholder="go to"
      size="5"
      type="number"
    />
  </ul>
</DocumentFragment>
`;

exports[`makePagination > out of bounds 1`] = `
<DocumentFragment>
  <ul
    class="pagination"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          class="sr-only"
        >
          First
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          class="sr-only"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
        <span
          class="sr-only"
        >
          More
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        16
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        17
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
      >
        18
        <span
          class="sr-only"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          class="sr-only"
        >
          Next
        </span>
      </span>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          class="sr-only"
        >
          Last
        </span>
      </span>
    </li>
    <input
      data-bb-test-id="pagination-goto-input"
      enterkeyhint="go"
      max="18"
      min="1"
      placeholder="go to"
      size="5"
      type="number"
    />
  </ul>
</DocumentFragment>
`;

exports[`makePagination > paginate data 1`] = `
<DocumentFragment>
  <ul
    class="pagination"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          class="sr-only"
        >
          First
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          class="sr-only"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        1
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
      >
        2
        <span
          class="sr-only"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        3
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        4
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
        <span
          class="sr-only"
        >
          More
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          class="sr-only"
        >
          Next
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="#"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          class="sr-only"
        >
          Last
        </span>
      </a>
    </li>
    <input
      data-bb-test-id="pagination-goto-input"
      enterkeyhint="go"
      max="18"
      min="1"
      placeholder="go to"
      size="5"
      type="number"
    />
  </ul>
</DocumentFragment>
`;
